// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component Should be large, red, disabled and multioption 1`] = `
<div
  className="select is-large is-danger is-multiple"
>
  <select
    disabled={true}
    multiple={true}
    readOnly={false}
    value={Array []}
  >
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;

exports[`Select component Should be loading, hovered and focused 1`] = `
<div
  className="select is-loading"
>
  <select
    className="is-focused is-hovered"
    disabled={false}
    multiple={false}
    readOnly={false}
    value=""
  >
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;

exports[`Select component Should be rounded 1`] = `
<div
  className="select is-rounded"
>
  <select
    disabled={false}
    multiple={false}
    readOnly={false}
    value=""
  >
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;

exports[`Select component Should concat classname in props with Bulma classname 1`] = `
<div
  className="select other-class this-is-a-test"
>
  <select
    disabled={false}
    multiple={false}
    readOnly={false}
    value=""
  >
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;

exports[`Select component Should exist 1`] = `[Function]`;

exports[`Select component Should have select classname 1`] = `
<div
  className="select"
>
  <select
    disabled={false}
    multiple={false}
    readOnly={false}
    value=""
  >
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;

exports[`Select component Should use inline styles 1`] = `
<div
  className="select"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <select
    disabled={false}
    multiple={false}
    readOnly={false}
    value=""
  >
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;

exports[`Select component value PropTypes Should be multioption and should not accept non array value 1`] = `
<div
  className="select is-multiple"
>
  <select
    disabled={false}
    multiple={true}
    readOnly={false}
    value={1}
  />
</div>
`;

exports[`Select component value PropTypes Should not be multioption and should not accept array value 1`] = `
<div
  className="select"
>
  <select
    disabled={false}
    multiple={false}
    readOnly={false}
    value={
      Array [
        1,
        2,
        3,
      ]
    }
  />
</div>
`;
